--- a/public/index.html
+++ b/public/index.html
@@ -721,7 +721,7 @@
             <div class="avatar-wrap">
               <div class="avatar-inner">
                 <!-- Replace with your real image file -->
-                <img src="your-photo.jpg" alt="Portrait of Koulik De Sarkar" />
+                <img src="myphoto.jpeg" alt="Portrait of Koulik De Sarkar" />
               </div>
             </div>
             <div class="profile-meta">
