--- a/public/index.html
+++ b/public/index.html
@@ -779,7 +779,7 @@
             <div class="avatar-wrap">
               <div class="avatar-inner">
                 <!-- Replace with your real image file -->
-                <img src="myphoto.jpg" alt="Portrait of Koulik De Sarkar" />
+                <img src="C:\Users\kouli\OneDrive\Desktop\myphoto.jpeg" alt="Portrait of Koulik De Sarkar" />
               </div>
             </div>
             <div class="profile-meta">
